--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,6 +36,7 @@
 <body onLoad="tm()">
 <header>NCU VEMS エネルギー可視化システム</header>
 <div class="main">
+	<div class="alert_area" id="alert_area">A202の電気を消してください！！</div>
 	<div class="section">
 		<div class="section_title">電力使用量</div>
 		<div class="section_contents">
@@ -44,7 +45,6 @@
 			</div>
 		</div>
 	</div>
-	<div class="alert_area" id="alert_area">DisplayName さん　A202の電気を消してください！！</div>
 	<div class="section" id="factry">
 		<div class="section_title">工場</div>
 		<div class="section_contents content_now">
